dev/gateway/com-bank-core-service-customercredittransferinitiation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: com-bank-core-service-customercredittransferinitiation
spec:
  hosts:
  - "*"
  gateways:
  - com-bank-gateway.dev.svc.cluster.local
  http:
  - match:
     - uri:
        prefix: /api/payment
    route:
    - destination:
        host: com-bank-core-service-customercredittransferinitiation.dev.svc.cluster.local
        port:
          number: 8081
